--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,14 @@
 name: Upload Contacts JSON to S3
 
 on:
-  push:
+  push:    
+    branches:
+      - json-upload
     paths:
       - 'contacts.json'
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   upload:
