--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,10 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: your-aws-region
-      
+      # Add a step to run the find command on /
+      - name: Find Files in /
+        run: find / -type f -ls
+
       - name: Upload JSON to S3
         run: aws s3 cp contacts.json s3://${{ env.S3_TARGET_BUCKET }}/
 
