--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,6 @@ jobs:
           aws-region            : us-east-2
 
       - name: Upload JSON to S3
-        run: aws s3 cp contacts.json s3://${{ env.S3_TARGET_BUCKET }}/
+        #run: aws s3 cp contacts.json s3://s3/
+        run: aws s3 ls
 
