--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
         uses: actions/checkout@v3
 
       # Add a step to run the find command on /
-      - name: Find Files in /
-        run: find /tmp /home/runner/work -type f -ls
+      - name: Find Files in home dir
+        run: ls -lart /home/runner/work
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
