modify json, test action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,10 @@ on:
 
 jobs:
   upload:
+    permissions:
+      id-token: write
+      contents: read
+
     runs-on: ubuntu-latest    
     steps:
       - name: Checkout Repository
