--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,10 @@ on:
 
 jobs:
   upload:
-    runs-on: ubuntu-latest    
+    runs-on: ubuntu-latest            
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -17,13 +20,14 @@ jobs:
       # Add a step to run the find command on /
       - name: Find Files in home dir
         run: ls -lart /home/runner/work
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      
+      - name: Configure my AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id     : ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key : ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region            : us-east-2
+          aws-access-key-id    :  ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region           :  ${{ env.AWS_REGION }}
+          mask-aws-account-id  : yes
 
             
       - name: Upload JSON to S3
