--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,17 @@ jobs:
       - name: Find Files in home dir
         run: ls -lart /home/runner/work
       
+      - name: Check for Secret availability
+        id: secret-check
+        # perform secret check & put boolean result as an output
+        shell: bash
+        run: |
+          if [ "${{ secrets.AWS_ACCESS_KEY_ID }}" != '' ]; then
+            echo "available=true" >> $GITHUB_OUTPUT;
+          else
+            echo "available=false" >> $GITHUB_OUTPUT;
+          fi
+       
       - name: Configure my AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
