--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,13 @@ jobs:
     runs-on: ubuntu-latest            
     permissions:
       id-token: write
-      contents: read
+      contents: read    
     steps:
       - name: Configure my AWS Credentials
+        env:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id    :  ${{ secrets.AWS_ACCESS_KEY_ID }}
