modify json, test action \#6

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         env:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-s3-target: ${{ AWS_S3_TARGET }}
+          aws-s3-target: ${{ env.aws-s3-target}}
     
         uses: aws-actions/configure-aws-credentials@v1
         
