--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,18 +16,8 @@ jobs:
     steps:
       - name: Configure my AWS Credentials
         env:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-s3-target: ${{ env.aws-s3-target}}
-    
-        uses: aws-actions/configure-aws-credentials@v1
-        
-        with:
-          aws-access-key-id    :  ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region           :  us-east-2
-          mask-aws-account-id  : yes
-
+        run: echo ${{ vars.AWS_S3_TARGET}}
             
       - name: Upload JSON to S3
         #run: aws s3 cp contacts.json s3://s3/
