--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,10 @@ on:
 jobs:
   upload:
     runs-on: ubuntu-latest            
+    env:
+      S3_TARGET = ${{env.AWS_S3_TARGET}}
     steps:
       - name: Configure my AWS Credentials
-        run: echo "s3 target is: ${{ vars.AWS_S3_TARGET }}"
+        run: echo "s3 target is: ${{ S3_TARGET }}"
             
 
