--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
   upload:
     runs-on: ubuntu-latest            
     env:
-      S3_TARGET = ${{env.AWS_S3_TARGET}}
+      S3_TARGET: ${{env.AWS_S3_TARGET}}
     steps:
       - name: Configure my AWS Credentials
         run: echo "s3 target is: ${{ S3_TARGET }}"
