modify json, test action \#14

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
 
     steps:
       - name: Configure my AWS Credentials
-        run: echo "s3 target is: $MY_S3_TARGET"
+        run: echo foo
             
 
