--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,7 @@ jobs:
 
     steps:
       - name: S3 var target
-        run: echo ${{ vars.AWS_S3_TARGET}}
-      - name: S3 env target
-        run: echo ${{ env.AWS_S3_TARGET}}
+        run: echo "var is ${{ vars.AWS_S3_TARGET}}   "
       - name: S3 local target
         run: echo "env $MY_S3_TARGET"
 
