--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,14 @@ jobs:
         
     env:
       MY_LOCAL_TARGET: "bug-bucket"
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: us-east-2
 
     steps:
       - name: S3 env target
         run: echo "env var is ${{ vars.AWS_S3_TARGET}}   "
+        
       - name: S3 local target
         run: echo "local var $MY_LOCAL_TARGET"
 
