--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: us-east-2
+      S3_BUCKET: ${{ vars.AWS_S3_TARGET }}
 
     steps:
       - name: S3 env target
@@ -26,6 +27,6 @@ jobs:
         run: echo "local var $MY_LOCAL_TARGET"
 
       - name: upload to s3
-        run: aws s3 ls s3://${{ vars.AWS_S3_TARGET }}
+        run: aws s3 ls s3://$S3_BUCKET
             
 
