--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: us-east-2
       S3_BUCKET: ${{ vars.AWS_S3_TARGET }}
+      SRC_FILE: ficticious-contacts.json
 
     steps:
       - name: S3 env target
@@ -27,6 +28,6 @@ jobs:
         run: echo "local var $MY_LOCAL_TARGET"
 
       - name: upload to s3
-        run: aws s3 ls s3://${{ vars.AWS_S3_TARGET}}   
+        run: aws s3 sync ${{ env.SRC_FILE }} s3://${{ vars.AWS_S3_TARGET}}   
             
 
