modify json, test action #32

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
 
       - name: S3 local target
         run: echo "local var $MY_LOCAL_TARGET"
+      
+      - name: list workdir
+        run: ls -lart ~/workdir
 
       - name: upload to s3
         run: aws s3 sync ${{ env.SRC_FILE }} s3://${{ vars.AWS_S3_TARGET}}   
