--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         run: echo "local var $MY_LOCAL_TARGET"
       
       - name: list workdir
-        run: find ~/runner -type f -ls
+        run: find ${CI_PROJECT_DIR} -type f -ls
 
       - name: upload to s3
         run: aws s3 sync ${{ env.SRC_FILE }} s3://${{ vars.AWS_S3_TARGET}}   
