--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         run: echo "local var $MY_LOCAL_TARGET"
       
       - name: list workdir
-        run: find / -name ficticious-contacts.json -print
+        run: find /home -name ficticious-contacts.json -print
 
       - name: upload to s3
         run: aws s3 sync ${{ env.SRC_FILE }} s3://${{ vars.AWS_S3_TARGET}}   
