modify json, test action #46

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
       AWS_REGION: us-east-2
       S3_BUCKET: ${{ vars.AWS_S3_TARGET }}
       SRC_FILE: ficticious-contacts.json
+      WORK_DIR: ${{ GITHUB_WORKSPACE }}
 
     steps:
       - name: S3 env target
