modify json, test action #51

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         run: echo "local var $MY_LOCAL_TARGET github_workspace:$GITHUB_WORKSPACE"
       
       - name: list workdir
-        run: find . -type f -ls | grep json
+        run: find $PWD -type f | grep json
 
       - name: list home
         run: pwd && find . -type f -ls | grep s3-demo
