--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,6 @@ jobs:
         run: pwd && find . -type f -ls | grep s3-demo
 
       - name: upload to s3
-        run: aws s3 sync ${{ env.SRC_FILE }} s3://${{ vars.AWS_S3_TARGET}}   
+        run: aws s3 sync /home/runner/work/s3-demo-cicd/s3-demo-cicd/repo/${{ env.SRC_FILE }} s3://${{ vars.AWS_S3_TARGET}}   
             
 
