--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,16 +10,19 @@ on:
 
 jobs:
   s3-upload:
-    runs-on: ubuntu-latest        
+    runs-on: ubuntu-latest
+
+    # get runtime variables/secrets from this environmnet configuration
     environment: s3-demo-cicd
-        
+  
+    #/home/runner/work/s3-demo-cicd/s3-demo-cicd
     env:
       AWS_ACCESS_KEY_ID     : ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY : ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION            : us-east-2
       S3_BUCKET             : ${{ vars.AWS_S3_TARGET }}
       SRC_FILE              : ficticious-contacts.json
-      WORK_PREFIX           ; /tmp  #/home/runner/work/s3-demo-cicd/s3-demo-cicd
+      WORK_PREFIX           : /tmp
       WORK_DIR              : repo
 
     steps:
