--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID     : ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY : ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION            : us-east-2
-      S3_BUCKET             : ${{ vars.AWS_S3_TARGET }}
+      AWS_REGION            : ${{ vars.AWS_REGION }}
+      S3_BUCKET             : s3-demo-alpha-zulu
       SRC_FILE              : ficticious-contacts.json
       WORK_PREFIX           : /home/runner/work/
       WORK_DIR              : repo
@@ -32,7 +32,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: ${{ env.GH_ACCT }}/${{ env.GH_REPO }}
-          path: ${{ env.WORK_PREFIX }}/${{ env.GH_REPO }}/${{ env.WORK_DIR }}
+          path: ${{ env.WORK_PREFIX }}/${{ env.GH_REPO }}/${{ vars.environment}}/${{ env.WORK_DIR }}
 
       - name: list workdir
         run: find ${{ env.WORK_PREFIX }}/${{ env.WORK_DIR }} -type f | grep json
