--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       AWS_ACCESS_KEY_ID     : ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY : ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION            : ${{ vars.AWS_REGION }}
-      S3_BUCKET             : s3-demo-alpha-zulu
+      S3_TARGET             : s3-demo-alpha-zulu
       SRC_FILE              : ficticious-contacts.json
       WORK_PREFIX           : /home/runner/work/
       WORK_DIR              : repo
@@ -38,6 +38,6 @@ jobs:
         run: find ${{ env.WORK_PREFIX }}/${{ env.WORK_DIR }} -type f | grep json
 
       - name: upload to s3
-        run: aws s3 cp ${{ env.WORK_PREFIX }}/${{ env.WORK_DIR }}/${{ env.SRC_FILE }} s3://${{ vars.AWS_S3_TARGET}}   
+        run: aws s3 cp ${{ env.WORK_PREFIX }}/${{ env.WORK_DIR }}/${{ env.SRC_FILE }} s3://${{ env.S3_TARGET}}   
             
 
