--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,12 +32,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: ${{ env.GH_ACCT }}/${{ env.GH_REPO }}
-          path: ${{ env.WORK_PREFIX }}/${{ env.GH_REPO }}/${{ vars.environment}}/${{ env.WORK_DIR }}
+          path: ./${{ env.WORK_DIR}}
 
       - name: list workdir
-        run: find ${{ env.WORK_PREFIX }}/${{ env.WORK_DIR }} -type f | grep json
+        run: find ${{ env.WORK_PREFIX }}/${{ env.GH_REPO }}/${{ env.WORK_DIR }} -type f | grep json
 
       - name: upload to s3
-        run: aws s3 cp ${{ env.WORK_PREFIX }}/${{ env.WORK_DIR }}/${{ env.SRC_FILE }} s3://${{ env.S3_TARGET}}   
+        run: aws s3 cp ${{ env.WORK_PREFIX }}/${{ env.GH_REPO }}/${{ env.WORK_DIR }}/${{ env.SRC_FILE }} s3://${{ env.S3_TARGET }}   
             
 
