--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     # get runtime variables/secrets from this environmnet configuration
-    environment: s3-demo-cicd
+    environment: tb-test
   
     env:
       AWS_ACCESS_KEY_ID     : ${{ secrets.AWS_ACCESS_KEY_ID }}
