--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,9 @@ jobs:
         with:
           repository: ${{ env.GH_ACCT }}/${{ env.GH_REPO }}
           path: ./${{ env.WORK_DIR}}
-
+      - name: display env
+        run: env
+        
       - name: list workdir
         run: find ${{ env.WORK_PREFIX }}/${{ env.GH_REPO }}/${{ env.WORK_DIR }} -type f | grep json
 
