--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,6 @@ jobs:
       AWS_REGION            : ${{ vars.AWS_REGION }}
       S3_TARGET             : s3-demo-alpha-zulu
       SRC_FILE              : ficticious-contacts.json
-      WORK_PREFIX           : /home/runner/work/
       WORK_DIR              : repo
       GH_REPO               : s3-demo-cicd
       GH_ACCT               : z-tb
@@ -32,18 +31,17 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: ${{ env.GH_ACCT }}/${{ env.GH_REPO }}
-          path: ./${{ env.WORK_DIR}}
-      
+     
       - name: display env
         run: env
 
       - name: ls repo
         run: ls -l ${{ env.GITHUB_WORKSPACE }}
-        
+
       - name: list workdir
-        run: find ${{ env.WORK_PREFIX }}/${{ env.GH_REPO }}/${{ env.WORK_DIR }} -type f | grep json
+        run: find ${{ env.GITHUB_WORKSPACE }} -type f | grep json
 
       - name: upload to s3
-        run: aws s3 cp ${{ env.WORK_PREFIX }}/${{ env.GH_REPO }}/${{ env.WORK_DIR }}/${{ env.SRC_FILE }} s3://${{ env.S3_TARGET }}   
+        run: aws s3 cp ${{ env.GITHUB_WORKSPACE }}/${{ env.SRC_FILE }} s3://${{ env.S3_TARGET }}   
             
 
