--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,10 +36,10 @@ jobs:
         run: env
 
       - name: ls repo
-        run: ls -l ${{ env.GITHUB_WORKSPACE }}
+        run: ls -lart ${{ env.GITHUB_WORKSPACE }}
 
       - name: list workdir
-        run: find ${{ env.GITHUB_WORKSPACE }} -type f -name ${{ env.SRC_FILE }}
+        run: find ${{ env.GITHUB_WORKSPACE }} -type f -name ${{ env.SRC_FILE }} -ls
 
       - name: upload to s3
         run: aws s3 cp ${{ env.GITHUB_WORKSPACE }}/${{ env.SRC_FILE }} s3://${{ env.S3_TARGET }}   
