modify json, test action #73

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,16 +32,10 @@ jobs:
         with:
           repository: ${{ env.GH_ACCT }}/${{ env.GH_REPO }}
      
-      - name: display env
-        run: env
-
       - name: ls repo
-        run: ls -lart ${{ env.GITHUB_WORKSPACE }}
-
-      - name: list workdir
-        run: find ${{ env.GITHUB_WORKSPACE }} -type f -name ${{ env.SRC_FILE }} -ls
+        run: ls -lart ${GITHUB_WORKSPACE}
 
       - name: upload to s3
-        run: aws s3 cp $GITHUB_WORKSPACE/$SRC_FILE s3://${{ env.S3_TARGET }}   
+        run: aws s3 cp ${GITHUB_WORKSPACE}/${SRC_FILE} s3://${S3_TARGET}   
             
 
